--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -44,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Giá SP"
+                android:textColor="#F87676"
                 android:textSize="25sp"
                 android:textStyle="bold" />
         </LinearLayout>
